Fixed arrivals time, stops page layout, and hopefully zoom problem on mobile devices.

--- a/style.css
+++ b/style.css
@@ -20,12 +20,16 @@ li i {
 
 .filter#stops {
 	width: 50%;
-	display: initial;
+	margin-right: 10px;
+	float: left;
 }
 
 #nearby {
-	float: right;
+}
+
+#nearby a {
 	padding: 10px 40px;
+	margin-bottom: 17px;
 }
 
 .sub-nav {
